@@ -1,3 +1,8 @@
+2012-12-04  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/lua-akfavatar-prg.c (handle_require_options):
+	-l defines a global variable for the module
+
 2012-12-01  Andreas K. Foerster  <info@akfoerster.de>
 
 	* mingw/windowstiming.c: new file
